Fix z-index

--- a/src/components/menu/menu.module.less
+++ b/src/components/menu/menu.module.less
@@ -16,7 +16,7 @@
   cursor: pointer;
   outline: 0;
   position: fixed;
-  z-index: 9999;
+  z-index: 101;
   top: 0;
   margin: 0;
   padding: 0;
